<?xml version="1.0"?>
<package format="2">
  <name>yrl_to_cloud</name>
  <version>2.4.0</version>
  
  <description>yrl_to_cloud package</description>
  <author email="hjkim2@yujinrobot.com">Hyeon Jeong Kim</author>
  <maintainer email="hjkim2@yujinrobot.com">Hyeon Jeong Kim</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>laser_assembler</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>laser_assembler</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>laser_assembler</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>
