<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yrl3_v2_ros2_package</name>
  <version>2.4.1</version>
  <description>ROS2 package for YRL3 V2 series</description>
  <author email="hjkim2@yujinrobot.com">Hyeon Jeong Kim</author>
  <maintainer email="hjkim2@yujinrobot.com">Hyeon Jeong Kim</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rcl_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
